fixed feedback width on mobile devices at otzyvy.html

--- a/#src/scss/style.sass
+++ b/#src/scss/style.sass
@@ -5917,6 +5917,9 @@
 		box-shadow: 0px 5px 13px rgba(0, 0, 0, 0.15)
 		border-radius: 6px
 
+		@media screen and (max-width: $media-sm)
+			max-width: 260px
+
 		&:not(:nth-last-child(-n + 4))
 			margin-bottom: 30px
 
